<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_drawer_introduction" />
        <item
            android:id="@+id/nav_club"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_drawer_club" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_drawer_notice" />
        <item
            android:id="@+id/nav_toolbox"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_drawer_toolbox" />
    </group>

    <item android:title="@string/action_drawer_title">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_drawer_setting" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_drawer_share" />
        </menu>
    </item>

</menu>
